# pulse-2

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MODULE.bazel  README.md  RELEASE_NOTES.md  clean-history.sh
.devcontainer/: devcontainer.json  docker-compose.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  chore_request.yaml  development_tools.yaml  documentation_improvement.yaml  feature_request.yaml  question_support.yaml
.github/workflows/: ci.yaml  coverage.yaml  linter.yaml
go/: README.md  go.mod  go.sum  pulse.go
go/examples/logging/: main.go
go/examples/mcap/: main.go
go/examples/metrics/: main.go
go/examples/profiling/: main.go
go/examples/tracing/: main.go
go/internal/foxglove/: mcap.go
go/internal/logging/: logging.go  mcap.go  resolvers.go
go/internal/metrics/: mcap.go  metrics.go
go/internal/profiling/: profiling.go
go/internal/telemetry/: client.go  logger.go
go/internal/tracing/: tracing.go
go/options/: default.go  options.go
otel/: README.md  docker-compose.yaml
otel/config/: grafana-datasources.yaml  loki.yaml  otel-collector.yaml  tempo.yaml
otel/docker/: otelcol.Dockerfile
python/: pyproject.toml
python/examples/: simple.py
python/pulse/: __init__.py  pulse.py
python/pulse/_foxglove/: __init__.py  mcap.py
python/pulse/_profiling/: __init__.py  profiler.py
python/pulse/_telemetry/: __init__.py  telemetry.py
python/pulse/_tracing/: __init__.py  tracing.py
python/pulse/internal/: __init__.py  foxglove.py  logging.py  metrics.py  profiling.py  telemetry.py  tracing.py
python/pulse/logging/: __init__.py  logger.py
python/pulse/metrics/: __init__.py  metrics.py
python/pulse/options/: __init__.py  environment.py  foxglove_options.py  otlp_options.py  profiling_options.py  pulse_options.py  service_options.py  telemetry_options.py
rust/: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel  WORKSPACE.bazel
rust/bazel/: defs.bzl
rust/bazel/lib/private/: BUILD.bazel
rust/bazel/private/: features_file.bzl
rust/examples/: BUILD.bazel  simple.rs
rust/src/: common.rs  error.rs  lib.rs  log.rs  metrics.rs  session.rs  trace.rs
rust/tools/development/docker/: docker-compose.yaml  loki.yaml  otelcol-config.yaml  prometheus.yaml
rust/tools/development/docker/grafana/: grafana.ini
rust/tools/development/docker/grafana/provisioning/dashboards/: dashboards.yaml  example-simple.json
rust/tools/development/docker/grafana/provisioning/datasources/: local.yaml
tools/: BUILD.bazel
