"""
This Module file is only CI purposes only.
Please look into respestive language module file for actual module file.
"""

module(
    name = "pulse",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)

bazel_dep(name = "platforms", version = "0.0.9")

# For VSCode Go Extension - Development Only.
bazel_dep(name = "rules_go", version = "0.46.0", dev_dependency = True)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk.download(version = "1.21.7")
