[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulse"
version = "0.1.0"
description = "Pulse Observability Framework - Python SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "grpcio>=1.76.0",
    "lz4>=4.4.5",
    "mcap>=1.3.0",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
    "opentelemetry-instrumentation>=0.59b0",
    "opentelemetry-sdk>=1.38.0",
    "protobuf>=6.33.0",
    "pyroscope-io>=0.8.11",
    "structlog>=25.5.0",
    "uuid>=1.30",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.4",
]
