load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")
load("//bazel:defs.bzl", "crate_features_file")

rust_library(
    name = "pulse",
    srcs = glob(
        [
            "**/*.rs",
        ],
        exclude = [
            "src/main.rs",
        ],
    ),
    compile_data = [
        ":features",
    ],
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    rustc_flags = [
        "@$(location :features)",
    ],
    visibility = ["//visibility:public"],
    deps = all_crate_deps(
        normal = True,
    ),
)

bool_flag(
    name = "logs",
    build_setting_default = True,
)

bool_flag(
    name = "trace",
    build_setting_default = True,
)

crate_features_file(
    name = "features",
    flags = [
        ":logs",
        ":trace",
    ],
)
