load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "pulse",
    srcs = glob([
        "src/**/*.rs",
    ]),
    crate_features = [
        "logs",
        "metrics",
        "trace",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = [
        "//:__subpackages__",
    ],
    deps = all_crate_deps(normal = True),
)
