[package]
name = "pulse"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default_features = false, features = [
    "std",
    "fmt",
    "ansi",
    "env-filter",
] }
opentelemetry = { version = "0.22.0", default-features = false }
opentelemetry_sdk = { version = "0.22.0", default-features = false, features = [
    "rt-tokio",
] }
opentelemetry-otlp = { version = "0.15.0", features = [
    "http-proto",
    "reqwest-client",
] }
opentelemetry-semantic-conventions = "0.14.0"
tracing-opentelemetry = { version = "0.23.0", default-features = false, optional = true }
serde = { version = "1.0.198", features = ["derive"] }
thiserror = "1.0.59"
serde_json = "1.0.116"
figment = { version = "0.10.18", features = ["env", "toml"] }
opentelemetry-appender-log = { version = "0.3.0", optional = true }
env_logger = { version = "0.11.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["trace", "logs"]
trace = [
    "dep:tracing-opentelemetry",
    "opentelemetry/trace",
    "opentelemetry_sdk/trace",
    "opentelemetry-otlp/trace",
]
logs = [
    "dep:env_logger",
    "dep:opentelemetry-appender-log",
    "opentelemetry/logs",
    "opentelemetry/logs_level_enabled",
    "opentelemetry_sdk/logs",
    "opentelemetry_sdk/logs_level_enabled",
    "opentelemetry-otlp/logs",
]
