""" Module file for pulse """

module(
    name = "pulse_rust",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)
bazel_dep(name = "rules_java", version = "7.4.0", dev_dependency = True)  # For code coverage

bazel_dep(name = "rules_rust", version = "0.40.0")
bazel_dep(name = "hermetic_cc_toolchain", version = "3.0.1")
bazel_dep(name = "pulse", version = "0.0.0")
local_path_override(
    module_name = "pulse",
    path = "../",
)

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.31",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.31",
    "@zig_sdk//toolchain:darwin_amd64",
    "@zig_sdk//toolchain:darwin_arm64",
    "@zig_sdk//toolchain:windows_amd64",
    "@zig_sdk//toolchain:windows_arm64",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    extra_target_triples = [
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
    ],
    versions = ["1.77.2"],
)
use_repo(rust, "rust_toolchains")

register_toolchains(
    "@rust_toolchains//:all",
)

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "Cargo.lock",
    manifests = ["Cargo.toml"],
)
use_repo(crate, "crates")
