load("@rules_rust//rust:defs.bzl", "rust_binary")
load("//bazel/lib:defs.bzl", "gen_env_file")

rust_binary(
    name = "simple",
    srcs = [
        "simple.rs",
    ],
    rustc_env_files = [
        ":env.txt",
    ],
    deps = [
        "//:pulse",
        "@crates//:rand",
        "@crates//:tokio",
        "@crates//:toml",
        "@crates//:tracing",
    ],
)

# required if using nix shell on macos darwin. This adds LIBRARY_PATH env variable's value
# to a file which can be used in rust_binary. This fixes the "-liconv not found" issue on
# macos darwin when using nix shell.
#
# The path to libiconv is present in LIBRARY_PATH, which is set by the nix flake.
gen_env_file(
    name = "env_file",
    out = "env.txt",
)
